# screenshoter

./: Makefile  Makefile.am  configure.ac  screenshot.cpp  screenshoter  screenshoter.1  screenshoter.c  screenshoter.orig.c
debian/: changelog  control  copyright  rules
mswin/: screenshoter.cpp
